parser/testdata/golden/error_rpc_missing_return.expected
ERROR: syntax error at line 2, column 30: expected Colon, found ';'
