parser/testdata/golden/error_rpc_missing_return.fbs
table Req { data:string; }
rpc_service Svc { Method(Req); }
